// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`projectsReducer Adds a new project correctly 1`] = `
Object {
  "ids": Array [
    "project-1",
    "project-2",
  ],
  "meta": Object {
    "activeProjectUuid": "project-2",
  },
  "project-1": Object {
    "createdDate": "01-01-2021",
    "description": "this is a test description",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "metadataKeys": Array [],
    "name": "test project",
    "samples": Array [],
    "uuid": "project-1",
  },
  "project-2": Object {
    "createdDate": "01-01-2021",
    "description": "This is another test description :)",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "metadataKeys": Array [],
    "name": "test project 2",
    "samples": Array [],
    "uuid": "project-2",
  },
}
`;

exports[`projectsReducer Correctly creates project metadata 1`] = `
Object {
  "[object Object]": Object {
    "createdDate": "01-01-2021",
    "description": "this is a test description",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "metadataKeys": Array [],
    "name": "test project",
    "samples": Array [],
    "uuid": "project-1",
  },
  "ids": Array [
    "project-1",
  ],
  "meta": Object {
    "activeProjectUuid": "project-1",
  },
  "project-1": Object {
    "createdDate": "01-01-2021",
    "description": "this is a test description",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "metadataKeys": Array [
      "metadata-test",
    ],
    "name": "test project",
    "samples": Array [],
    "uuid": "project-1",
  },
}
`;

exports[`projectsReducer Correctly deletes project metadata 1`] = `
Object {
  "[object Object]": Object {
    "createdDate": "01-01-2021",
    "description": "this is a test description",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "metadataKeys": Array [
      "metadata-old",
    ],
    "name": "test project",
    "samples": Array [],
    "uuid": "project-1",
  },
  "ids": Array [
    "project-1",
  ],
  "meta": Object {
    "activeProjectUuid": "project-1",
  },
  "project-1": Object {
    "createdDate": "01-01-2021",
    "description": "this is a test description",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "metadataKeys": Array [],
    "name": "test project",
    "samples": Array [],
    "uuid": "project-1",
  },
}
`;

exports[`projectsReducer Correctly updates project metadata 1`] = `
Object {
  "[object Object]": Object {
    "createdDate": "01-01-2021",
    "description": "this is a test description",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "metadataKeys": Array [
      "metadata-old",
    ],
    "name": "test project",
    "samples": Array [],
    "uuid": "project-1",
  },
  "ids": Array [
    "project-1",
  ],
  "meta": Object {
    "activeProjectUuid": "project-1",
  },
  "project-1": Object {
    "createdDate": "01-01-2021",
    "description": "this is a test description",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "metadataKeys": Array [
      "metadata-new",
    ],
    "name": "test project",
    "samples": Array [],
    "uuid": "project-1",
  },
}
`;

exports[`projectsReducer Deletes projects correctly 1`] = `
Object {
  "ids": Array [
    "project-1",
  ],
  "meta": Object {
    "activeProjectUuid": "project-2",
  },
  "project-1": Object {
    "createdDate": "01-01-2021",
    "description": "this is a test description",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "metadataKeys": Array [],
    "name": "test project",
    "samples": Array [],
    "uuid": "project-1",
  },
}
`;

exports[`projectsReducer Inserts a new project correctly 1`] = `
Object {
  "ids": Array [
    "project-1",
  ],
  "meta": Object {
    "activeProjectUuid": "project-1",
    "error": false,
    "loading": true,
    "saving": false,
  },
  "project-1": Object {
    "createdDate": "01-01-2021",
    "description": "this is a test description",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "metadataKeys": Array [],
    "name": "test project",
    "samples": Array [],
    "uuid": "project-1",
  },
}
`;

exports[`projectsReducer Restore a specific state correctly 1`] = `
Object {
  "ids": Array [
    "project-1",
    "project-2",
  ],
  "meta": Object {
    "activeProjectUuid": "project-2",
  },
  "project-1": Object {
    "createdDate": "01-01-2021",
    "description": "this is a test description",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "metadataKeys": Array [],
    "name": "test project",
    "samples": Array [],
    "uuid": "project-1",
  },
  "project-2": Object {
    "createdDate": "01-01-2021",
    "description": "This is another test description :)",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "metadataKeys": Array [],
    "name": "test project 2",
    "samples": Array [],
    "uuid": "project-2",
  },
}
`;

exports[`projectsReducer Sets an active project correctly 1`] = `
Object {
  "ids": Array [
    "project-1",
    "project-2",
  ],
  "meta": Object {
    "activeProjectUuid": "project-2",
  },
  "project-1": Object {
    "createdDate": "01-01-2021",
    "description": "this is a test description",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "metadataKeys": Array [],
    "name": "test project",
    "samples": Array [],
    "uuid": "project-1",
  },
  "project-2": Object {
    "createdDate": "01-01-2021",
    "description": "This is another test description :)",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "metadataKeys": Array [],
    "name": "test project 2",
    "samples": Array [],
    "uuid": "project-2",
  },
}
`;

exports[`projectsReducer Sets up saved state correctly 1`] = `
Object {
  "ids": Array [
    "project-1",
  ],
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
  "project-1": Object {
    "createdDate": "01-01-2021",
    "description": "this is a test description",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "metadataKeys": Array [],
    "name": "test project",
    "samples": Array [],
    "uuid": "project-1",
  },
}
`;

exports[`projectsReducer Sets up saving state correctly 1`] = `
Object {
  "ids": Array [
    "project-1",
  ],
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": true,
  },
  "project-1": Object {
    "createdDate": "01-01-2021",
    "description": "this is a test description",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "metadataKeys": Array [],
    "name": "test project",
    "samples": Array [],
    "uuid": "project-1",
  },
}
`;

exports[`projectsReducer Stores error state correctly 1`] = `
Object {
  "ids": Array [
    "project-1",
  ],
  "meta": Object {
    "error": "Error message",
    "loading": false,
    "saving": false,
  },
  "project-1": Object {
    "createdDate": "01-01-2021",
    "description": "this is a test description",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "metadataKeys": Array [],
    "name": "test project",
    "samples": Array [],
    "uuid": "project-1",
  },
}
`;

exports[`projectsReducer Updates a project correctly 1`] = `
Object {
  "ids": Array [
    "project-1",
  ],
  "meta": Object {
    "activeProjectUuid": "project-1",
  },
  "project-1": Object {
    "createdDate": "01-01-2021",
    "description": "this is a test description",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "02-01-2021",
    "metadataKeys": Array [],
    "name": "updated name",
    "samples": Array [],
    "uuid": "project-1",
  },
}
`;
